force-app/main/default/objects/FundingOpportunity/FundingOpportunity.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>