force-app/main/default/objects/FundingOpportunity/fields/Available_Funds__c.field-meta.xml
<CustomField>
    <fullName>Available_Funds__c</fullName>
    <formula>Allocation__c  -  Total_Disbursed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>