force-app/main/default/objects/FundingOpportunity/fields/EGrAMS_ID__c.field-meta.xml
<CustomField>
    <fullName>EGrAMS_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>The legacy ID for records migrated from EGrAMS (2024/2025). Sometimes the ID is straight from EGrAMS, other times
the Coastal team had to create a unique ID.</inlineHelpText>
    <label>EGrAMS ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>