force-app/main/default/objects/FundingOpportunity/fields/FAIN__c.field-meta.xml
<CustomField>
    <fullName>FAIN__c</fullName>
    <label>FAIN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>