force-app/main/default/objects/FundingOpportunity/fields/Federal_Agency__c.field-meta.xml
<CustomField>
    <fullName>Federal_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Federal Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funding Opportunities</relationshipLabel>
    <relationshipName>Funding_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>