force-app/main/default/objects/FundingOpportunity/fields/Helper_Federal_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Helper_Federal_Agency_Name__c</fullName>
    <formula>Federal_Agency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Helper Federal Agency Name</label>
    <type>Text</type>
</CustomField>