force-app/main/default/objects/FundingOpportunity/fields/Sum_of_Deobligations__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Deobligations__c</fullName>
    <inlineHelpText>This is a sum of deobligations for this funding opportunity</inlineHelpText>
    <label>Sum of Deobligations</label>
    <summarizedField>Funding_Transaction__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Funding_Transaction__c.Type_of_Transaction__c</field>
        <operation>equals</operation>
        <value>Opportunity</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Funding_Transaction__c.Entry_Type__c</field>
        <operation>equals</operation>
        <value>Deobligation</value>
    </summaryFilterItems>
    <summaryForeignKey>Funding_Transaction__c.Funding_Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>