force-app/main/default/objects/FundingOpportunity/fields/Sum_of_Obligations__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Obligations__c</fullName>
    <inlineHelpText>Rollup of funding transactions</inlineHelpText>
    <label>Sum of Obligations</label>
    <summarizedField>Funding_Transaction__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Funding_Transaction__c.Type_of_Transaction__c</field>
        <operation>equals</operation>
        <value>Opportunity</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Funding_Transaction__c.Entry_Type__c</field>
        <operation>equals</operation>
        <value>Obligation</value>
    </summaryFilterItems>
    <summaryForeignKey>Funding_Transaction__c.Funding_Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>