force-app/main/default/objects/FundingOpportunity/fields/Total_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocation__c</fullName>
    <inlineHelpText>Manually Entered</inlineHelpText>
    <label>Total Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>