force-app/main/default/objects/FundingOpportunity/fields/Total_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>Total_Disbursed__c</fullName>
    <inlineHelpText>This is the total amound disbursed on the executed contracts, and funding awards.</inlineHelpText>
    <label>Total Disbursed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>