force-app/main/default/objects/FundingOpportunity/fields/Total_Obligation__c.field-meta.xml
<CustomField>
    <fullName>Total_Obligation__c</fullName>
    <inlineHelpText>This is total funds obligated through executed contracts, the sum of the funding awards.</inlineHelpText>
    <label>Total Obligation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>