force-app/main/default/objects/FundingOpportunity/fields/Total_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Total_Reserved__c</fullName>
    <inlineHelpText>This is a sum of the total Amounts of Funding Awards that have not yet been executed.  This allows for tracking reserved funds to manage total Appropriation.</inlineHelpText>
    <label>Total Reserved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>