force-app/main/default/objects/FundingOpportunity/listViews/All_FundingOpportunities.listView-meta.xml
<ListView>
    <fullName>All_FundingOpportunities</fullName>
    <columns>Name</columns>
    <columns>Allocation__c</columns>
    <columns>Total_Allocation__c</columns>
    <columns>Total_Obligation__c</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Funding Opportunities</label>
</ListView>